--- a/views/post.ejs
+++ b/views/post.ejs
@@ -14,7 +14,7 @@
         </h2>
         <div class="post-page-info">
             <span>
-                <%= post.author %>
+                <%= post.author %> |
             </span>
             <span>
                 <%= post.date %>
