--- a/views/my-posts.ejs
+++ b/views/my-posts.ejs
@@ -22,7 +22,7 @@
       <% if (posts.length > 0) { for (let i = 0; i < posts.length; i++) { %>
       <div class="my-post my-3">
         <h3><%= posts[i].title %></h3>
-        <div class="my-post-options">
+        <div class="ms-4 my-post-options">
           <a class="text-reset" href="/edit?id=<%=posts[i].id%>">Edit</a>
           <a
             class="text-reset"
